Updated to the new version

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 VITE_API_BASE_URL=http://localhost:8080/
 VITE_AUTH0_DOMAIN=dev-k4e88kaom01nynb1.us.auth0.com
 VITE_AUTH0_CLIENT_ID=2IGZiOxAacn3AixuGi3Axumdm8xMWfsf
-VITE_AUTH0_CALLBACK_URL=https://mhenni.onrender.com/
+VITE_AUTH0_CALLBACK_URL=http://localhost:5173/welcome
 VITE_AUTH0_AUDIENCE=ods-api
