--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.3",
+    "react-modal": "^3.16.1",
     "react-modern-calendar-datepicker": "^3.1.6",
     "react-query": "^3.39.3",
     "react-rating-stars-component": "^2.2.0",
@@ -62,6 +63,7 @@
     "@types/react-anchor-link-smooth-scroll": "^1.0.5",
     "@types/react-datepicker": "^6.2.0",
     "@types/react-dom": "^18.2.22",
+    "@types/react-modal": "^3.16.3",
     "@types/react-star-ratings": "^2.3.3",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
